# espyta

./: README.md  espyta.service-example  espyta.toml-example  pyproject.toml
doc/: autodoc.rst  conf.py  configuration.rst  index.rst  installation.rst
espyta/: __main__.py  command.py  http.py
