[tool.poetry]
name = "espyta"
version = "0.0.0"
description = "Webhook handler to flash ESPs through OTA."
authors = ["supakeen <cmdr@supakeen.com>"]
license = "MIT"
readme = "README.md"
keywords = ["esp", "embedded"]
homepage = "https://supakeen.com/project/espyta"
repository = "https://github.com/supakeen/espyta"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.6,<4"
tornado = "^6.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^4.5"
black = { version = "*", allow-prereleases = true }
pytest-cov = "^2.8"
pre-commit = "^1.20"
flake8 = "^3.7"
mypy = "^0.740.0"

[tool.black]
line-length = 80
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.poetry.scripts]
espyta = 'espyta.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

